fixed comments wrapping

--- a/public/css/src/pages/_landing.scss
+++ b/public/css/src/pages/_landing.scss
@@ -192,6 +192,7 @@ p.comment-text {
 	font-style: normal;
 	margin: 12px 0;
 	line-height: 1.2;
+	word-wrap: break-word;
 }
 
 
